--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <div class="col-lg-4">
                 <div class="card mb-5 mb-lg-0">
                   <div class="card-body">
-                    <h5 class="card-title text-muted text-uppercase text-center">Small</h5>
+                    <h5 class="card-title text-muted text-uppercase text-center">S</h5>
                     <h6 class="card-subtitle text-muted text-center">Up to 50 Models</h6>
                     <hr>
                     <ul class="fa-ul">
@@ -28,7 +28,7 @@
                       <li><span class="fa-li"><i class="fas fa-check"></i></span>14 Work Days</li>
                       <li><span class="fa-li"><i class="fas fa-check"></i></span>FBX Format</li>
                     </ul>
-                    <a href="#" class="btn btn-block btn-primary text-uppercase"><h6 class="card-price text-center">Rp.6.597.000 - Rp.10.995.000</h6></a>
+                    <a href="#" class="btn btn-block btn-primary text-uppercase"><h6 class="card-price text-center">Rp.6.499.000</h6></a>
                   </div>
                 </div>
               </div>
@@ -37,7 +37,7 @@
               <div class="col-lg-4">
                 <div class="card mb-5 mb-lg-0">
                   <div class="card-body">
-                    <h5 class="card-title text-muted text-uppercase text-center">Medium</h5>
+                    <h5 class="card-title text-muted text-uppercase text-center">M</h5>
                     <h6 class="card-subtitle text-muted text-center">Up to 100 Models</h6>
                     <hr>
                     <ul class="fa-ul">
@@ -47,7 +47,7 @@
                       <li><span class="fa-li"><i class="fas fa-check"></i></span>28 Work Days</li>
                       <li><span class="fa-li"><i class="fas fa-check"></i></span>FBX & Blend Format</li>
                     </ul>
-                    <a href="#" class="btn btn-block btn-primary text-uppercase"><h6 class="card-price text-center">Rp.11.874.600 - Rp.19.791.000</h6></a>
+                    <a href="#" class="btn btn-block btn-primary text-uppercase"><h6 class="card-price text-center">Rp.13.499.000</h6></a>
                   </div>
                 </div>
               </div>
@@ -56,7 +56,7 @@
              <div class="col-lg-4">
                 <div class="card mb-5 mb-lg-0">
                   <div class="card-body">
-                    <h5 class="card-title text-muted text-uppercase text-center">Large</h5>
+                    <h5 class="card-title text-muted text-uppercase text-center">L</h5>
                     <h6 class="card-subtitle text-muted text-center">Up to 200 Models</h6>
                     <hr>
                     <ul class="fa-ul">
@@ -66,7 +66,7 @@
                       <li><span class="fa-li"><i class="fas fa-check"></i></span>42 Work Days</li>
                       <li><span class="fa-li"><i class="fas fa-check"></i></span>FBX & Blend Format</li>
                     </ul>
-                    <a href="#" class="btn btn-block btn-primary text-uppercase"><h6 class="card-price text-center">Rp17.811.900 - Rp.29.686.500</h6></a>
+                    <a href="#" class="btn btn-block btn-primary text-uppercase"><h6 class="card-price text-center">Rp20.499.000</h6></a>
                   </div>
                 </div>
              </div>
