--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     
 </head>
 <body>
+  <div class="container">
+    <div class="row mt-4 mb-4 justify-content-center" >
+        <div class="col-md-4">
+          <ul class="list-group">
+            <li class="list-group-item active btn-dark">Simple Model</li>
+            <li class="list-group-item"><i>-Low Poly</i> <br>Start From <h3>Rp.99.000/Model</h3></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul class="list-group">
+            <li class="list-group-item active btn-dark">Complex Model</li>
+            <li class="list-group-item"> <i>-High Poly</i> <br>Start From <h3>Rp.299.000/Model</h3> </li>
+          </ul>
+        </div>
+    </div>
+    
+  </div>
     <section class="pricing py-5">
         <div class="container">
           <div class="row">
