--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>3D Model Factory | 4Happy Studio</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     
 </head>
 <body>
+  <!-- As a heading -->
+<nav class="navbar navbar-dark bg-dark">
+  <span class="navbar-brand mb-0 h1">4Happy Studio</span>
+</nav>
   <div class="container">
-    <div class="row mt-4 mb-4 justify-content-center" >
+    <div class="row mb-4 justify-content-center" style="margin-top: 10%;" >
         <div class="col-md-4">
           <ul class="list-group">
             <li class="list-group-item active btn-dark">Simple Model</li>
