--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="col-md-4">
           <ul class="list-group">
             <li class="list-group-item active btn-dark">Simple Model</li>
-            <li class="list-group-item"><i>-Low Poly</i> <br>Start From <h3>Rp.99.000/Model</h3></li>
+            <li class="list-group-item"><i>-Low Poly</i> <br><i>-1 Work Day</i> <br>Start From <h3>Rp.99.000/Model</h3></li>
           </ul>
         </div>
         <div class="col-md-4">
           <ul class="list-group">
             <li class="list-group-item active btn-dark">Complex Model</li>
-            <li class="list-group-item"> <i>-High Poly</i> <br>Start From <h3>Rp.299.000/Model</h3> </li>
+            <li class="list-group-item"> <i>-High Poly</i><br>  <i>-2 Work Day</i> <br>Start From <h3>Rp.299.000/Model</h3> </li>
           </ul>
         </div>
     </div>
