--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    
 </head>
 <body>
   <!-- As a heading -->
@@ -97,6 +96,148 @@
 
         </div>
       </section>
+      
+   <!-- Gallery Area Start -->
+   <div class="card-header mb-5"></div>
+   <div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="text-center mt-15">
+      <h1>Portfolio</h1>
+      <p>LOVE TO WORK WITH THEM AS THEY ARE JUST AMAZING PEOPLE</p>
+   </div>  
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <!-- Projects Menu -->
+                <div class="alime-projects-menu">
+                    <div class="portfolio-menu text-center">
+                        <button class="btn active" data-filter="*">All</button>
+                        <button class="btn" data-filter="human">3D</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row alime-portfolio">
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms" data-category="human">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/alvin.png" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/3.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/computer.jpg" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/kepritraditionalhouse.jpg" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/jordan.png" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/6.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/sandcastle.png" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/7.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/ninja.jpg" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/8.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/character.jpg" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/10.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/Kerajaan.png" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/9.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/robot.png" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/36.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/minimello.jpg" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/37.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/kerbau.png" alt="">
+                    <div class="hover-content">
+                        <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+                <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Gallery Area End -->
+
 </body>
 </html>
 
