--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/alvin.png" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/3.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/alvin.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/computer.jpg" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/computer.jpg" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/kepritraditionalhouse.jpg" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/kepritraditionalhouse.jpg" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/jordan.png" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/6.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/jordan.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/sandcastle.png" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/7.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/sandcastle.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/ninja.jpg" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/8.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/ninja.jpg" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/character.jpg" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/10.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/character.jpg" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/Kerajaan.png" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/9.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/Kerajaan.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/robot.png" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/36.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/robot.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/minimello.jpg" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/37.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/minimello.jpg" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                 <div class="single-portfolio-content">
                     <img src="assets/img/kerbau.png" alt="">
                     <div class="hover-content">
-                        <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                        <a href="assets/img/kerbau.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
