--- a/index.html
+++ b/index.html
@@ -227,6 +227,26 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/Rumah L.png" alt="">
+                    <div class="hover-content">
+                        <a href="assets/img/Rumah L.png" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/Rumah F.png" alt="">
+                    <div class="hover-content">
+                        <a href="assets/img/Rumah F.png" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
 
         <div class="row">
