--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
                 <div class="single-portfolio-content">
-                    <img src="assets/img/Rumah L.png" alt="">
+                    <img src="assets/img/Playground3.png" alt="">
                     <div class="hover-content">
-                        <a href="assets/img/Rumah L.png" class="portfolio-img">+</a>
+                        <a href="assets/img/Playground3.png" class="portfolio-img">+</a>
                     </div>
                 </div>
             </div>
