--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@
                 </div>
             </div>
 
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="single-portfolio-content">
+                    <img src="assets/img/begu.png" alt="">
+                    <div class="hover-content">
+                        <a href="assets/img/begu.png" class="portfolio-img">+</a>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
